# OpenBonsai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: phase0_binary.json  phase0_ternary.json
docs/: 00-executive-brief.md  01-evidence-ledger.md  02-reverse-engineering-hypotheses.md  03-research-plan.md  04-evaluation-protocol.md  05-implementation-design.md  06-source-notes.md  07-forensic-methodology.md  08-training-recipe-v0.md  09-roadmap.md
results/: 1.7b_forensics.json  1.7b_forensics.md
scripts/: fetch_reference_artifacts.sh  run_forensics.sh  train_hf.py
src/openbonsai/: __init__.py  forensics.py  formats.py  matrix_lab.py  qat.py  quantize.py
tests/: test_formats.py  test_matrix_lab.py  test_quantize.py
